z-index fix

--- a/style.css
+++ b/style.css
@@ -108,8 +108,9 @@
 }
 
 .speech h1 {
-  margin-top: 40px;
-  font-size: 1.8em;
+  margin-top: 20px;
+  line-height: 150%;
+  font-size: 2.4em;
   padding: 15px;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
